<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#D3FBF3">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:orientation="vertical">
        <ImageView
            android:layout_width="200dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:src="@drawable/seres"
            android:contentDescription="@string/logo"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/person"
            android:layout_gravity="center"
            android:contentDescription="@string/person"
            android:layout_marginEnd="8dp"
            app:tint="@color/black" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/usuarioEditText"
            android:autofillHints="username"
            android:backgroundTint="@color/black"
            android:hint="@string/usuario"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            tools:ignore="TouchTargetSizeCheck"
            android:text="2017020423"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/password"
            android:layout_gravity="center"
            android:contentDescription="@string/password"
            android:layout_marginEnd="8dp"
            app:tint="@color/black" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/passwordEditText"
            android:autofillHints="password"
            android:backgroundTint="@color/black"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            tools:ignore="TouchTargetSizeCheck"
            android:text="NESB990715MOCGNR05N"/>
    </LinearLayout>
    <Button
        android:onClick="funExiste"
        android:layout_width="230dp"
        android:layout_height="65dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="40dp"
        app:backgroundTint="#50AEEC"
        android:text="@string/iniciar"
        android:textColor="@color/black"/>

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center"
    android:layout_gravity="bottom"
    android:layout_marginBottom="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recuperarPassword"
            android:textColor="@color/black"
            android:layout_marginEnd="5dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recuperarAqui"
            android:textColor="@color/black"
            android:textStyle="bold"/>
    </LinearLayout>
</LinearLayout>